--- a/notebooks/Example.ipynb
+++ b/notebooks/Example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 183,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 184,
    "metadata": {
     "collapsed": false
    },
@@ -25,193 +25,10 @@
     "import source.environment as environment\n",
     "import source.parsers as parsers\n",
     "import source.runner as runner\n",
+    "import source.errors as errors\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from importlib import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "values = [(1, 1), (2, 2), (3, 3)]\n",
-    "targets = range(len(values))\n",
-    "max(targets, key=lambda x: values[x][0])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "let's initialize a game with a Stackelberg attacker and a Uniform defender"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "g = game.Game(((1, 1), (2, 2), (3, 3)), 10)\n",
-    "d = player.Defender(g, 0, 1)\n",
-    "a = player.StackelbergAttacker(g, 1, 1)\n",
-    "g.players[0] = d\n",
-    "g.players[1] = a\n",
-    "g.defenders.append(0)\n",
-    "g.attackers.append(1)\n",
-    "e = environment.Environment(g, 0)\n",
-    "agent = d"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "we can now play the game"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "for t in range(g.time_horizon):\n",
-    "    strategy = agent.compute_strategy()\n",
-    "    e.observe_strategy(strategy)\n",
-    "    realization = agent.sample_strategy()\n",
-    "    e.observe_realization(realization)\n",
-    "    feedback = e.feedback(\"expert\")\n",
-    "    agent.receive_feedback(feedback)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{0: 0, 1: 0, 2: -3},\n",
-       " {0: 0, 1: 0, 2: 0},\n",
-       " {0: 0, 1: 0, 2: -3},\n",
-       " {0: 0, 1: 0, 2: -3},\n",
-       " {0: 0, 1: 0, 2: -3},\n",
-       " {0: 0, 1: 0, 2: 0},\n",
-       " {0: 0, 1: 0, 2: -3},\n",
-       " {0: 0, 1: 0, 2: 0},\n",
-       " {0: 0, 1: 0, 2: 0},\n",
-       " {0: 0, 1: 0, 2: -3}]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "agent.feedbacks"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "and here is how it has gone"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{0: [1], 1: [2]},\n",
-       " {0: [2], 1: [2]},\n",
-       " {0: [1], 1: [2]},\n",
-       " {0: [1], 1: [2]},\n",
-       " {0: [0], 1: [2]},\n",
-       " {0: [2], 1: [2]},\n",
-       " {0: [1], 1: [2]},\n",
-       " {0: [2], 1: [2]},\n",
-       " {0: [2], 1: [2]},\n",
-       " {0: [0], 1: [2]}]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "g.history"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{0: [0.3333333333333333, 0.3333333333333333, 0.3333333333333333],\n",
-       "  1: [0, 0, 1]},\n",
-       " {0: [0.3333333333333333, 0.3333333333333333, 0.3333333333333333],\n",
-       "  1: [0, 0, 1]},\n",
-       " {0: [0.3333333333333333, 0.3333333333333333, 0.3333333333333333],\n",
-       "  1: [0, 0, 1]},\n",
-       " {0: [0.3333333333333333, 0.3333333333333333, 0.3333333333333333],\n",
-       "  1: [0, 0, 1]},\n",
-       " {0: [0.3333333333333333, 0.3333333333333333, 0.3333333333333333],\n",
-       "  1: [0, 0, 1]},\n",
-       " {0: [0.3333333333333333, 0.3333333333333333, 0.3333333333333333],\n",
-       "  1: [0, 0, 1]},\n",
-       " {0: [0.3333333333333333, 0.3333333333333333, 0.3333333333333333],\n",
-       "  1: [0, 0, 1]},\n",
-       " {0: [0.3333333333333333, 0.3333333333333333, 0.3333333333333333],\n",
-       "  1: [0, 0, 1]},\n",
-       " {0: [0.3333333333333333, 0.3333333333333333, 0.3333333333333333],\n",
-       "  1: [0, 0, 1]},\n",
-       " {0: [0.3333333333333333, 0.3333333333333333, 0.3333333333333333],\n",
-       "  1: [0, 0, 1]}]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "g.strategy_history"
    ]
   },
   {
@@ -225,114 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(\"../games/conf.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>T</th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>Defender</th>\n",
-       "      <th>Attacker</th>\n",
-       "      <th>Attacker.1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>defender</td>\n",
-       "      <td>player</td>\n",
-       "      <td>stackelberg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>defender</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>stackelberg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>stu_defender</td>\n",
-       "      <td>stackelberg</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>12</td>\n",
-       "      <td>13</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>defender</td>\n",
-       "      <td>player</td>\n",
-       "      <td>stackelberg</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   T  0   1   2  3  4      Defender     Attacker   Attacker.1\n",
-       "0  5  2   1   3  1  1      defender       player  stackelberg\n",
-       "1  3  1   1   1  1  1      defender          NaN  stackelberg\n",
-       "2  6  1   3   1  2  1  stu_defender  stackelberg          NaN\n",
-       "3  5  1  12  13  1  1      defender       player  stackelberg"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 192,
    "metadata": {
     "collapsed": true
    },
@@ -350,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 385,
    "metadata": {
     "collapsed": false
    },
@@ -361,100 +71,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 386,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Optimize a model with 6 rows, 6 columns and 30 nonzeros\n",
-      "Coefficient statistics:\n",
-      "  Matrix range     [1e+00, 3e+00]\n",
-      "  Objective range  [1e+00, 1e+00]\n",
-      "  Bounds range     [0e+00, 0e+00]\n",
-      "  RHS range        [1e+00, 1e+00]\n",
-      "Presolve time: 0.01s\n",
-      "Presolved: 6 rows, 6 columns, 30 nonzeros\n",
-      "\n",
-      "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
-      "       0      handle free variables                          0s\n",
-      "       4   -1.2000000e+00   0.000000e+00   0.000000e+00      0s\n",
-      "\n",
-      "Solved in 4 iterations and 0.03 seconds\n",
-      "Optimal objective -1.200000000e+00\n",
-      "Optimize a model with 6 rows, 6 columns and 30 nonzeros\n",
-      "Coefficient statistics:\n",
-      "  Matrix range     [1e+00, 3e+00]\n",
-      "  Objective range  [1e+00, 1e+00]\n",
-      "  Bounds range     [0e+00, 0e+00]\n",
-      "  RHS range        [1e+00, 1e+00]\n",
-      "Presolve time: 0.01s\n",
-      "Presolved: 6 rows, 6 columns, 30 nonzeros\n",
-      "\n",
-      "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
-      "       0      handle free variables                          0s\n",
-      "       4   -1.2000000e+00   0.000000e+00   0.000000e+00      0s\n",
-      "\n",
-      "Solved in 4 iterations and 0.03 seconds\n",
-      "Optimal objective -1.200000000e+00\n",
-      "Optimize a model with 6 rows, 6 columns and 30 nonzeros\n",
-      "Coefficient statistics:\n",
-      "  Matrix range     [1e+00, 3e+00]\n",
-      "  Objective range  [1e+00, 1e+00]\n",
-      "  Bounds range     [0e+00, 0e+00]\n",
-      "  RHS range        [1e+00, 1e+00]\n",
-      "Presolve time: 0.02s\n",
-      "Presolved: 6 rows, 6 columns, 30 nonzeros\n",
-      "\n",
-      "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
-      "       0      handle free variables                          0s\n",
-      "       4   -1.2000000e+00   0.000000e+00   0.000000e+00      0s\n",
-      "\n",
-      "Solved in 4 iterations and 0.03 seconds\n",
-      "Optimal objective -1.200000000e+00\n",
-      "Optimize a model with 6 rows, 6 columns and 30 nonzeros\n",
-      "Coefficient statistics:\n",
-      "  Matrix range     [1e+00, 3e+00]\n",
-      "  Objective range  [1e+00, 1e+00]\n",
-      "  Bounds range     [0e+00, 0e+00]\n",
-      "  RHS range        [1e+00, 1e+00]\n",
-      "Presolve time: 0.01s\n",
-      "Presolved: 6 rows, 6 columns, 30 nonzeros\n",
-      "\n",
-      "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
-      "       0      handle free variables                          0s\n",
-      "       4   -1.2000000e+00   0.000000e+00   0.000000e+00      0s\n",
-      "\n",
-      "Solved in 4 iterations and 0.03 seconds\n",
-      "Optimal objective -1.200000000e+00\n",
-      "Optimize a model with 6 rows, 6 columns and 30 nonzeros\n",
-      "Coefficient statistics:\n",
-      "  Matrix range     [1e+00, 3e+00]\n",
-      "  Objective range  [1e+00, 1e+00]\n",
-      "  Bounds range     [0e+00, 0e+00]\n",
-      "  RHS range        [1e+00, 1e+00]\n",
-      "Presolve time: 0.02s\n",
-      "Presolved: 6 rows, 6 columns, 30 nonzeros\n",
-      "\n",
-      "Iteration    Objective       Primal Inf.    Dual Inf.      Time\n",
-      "       0      handle free variables                          0s\n",
-      "       4   -1.2000000e+00   0.000000e+00   0.000000e+00      0s\n",
-      "\n",
-      "Solved in 4 iterations and 0.03 seconds\n",
-      "Optimal objective -1.200000000e+00\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "r.run()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 387,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[experiment(environment=<Environment>, agent=<Defender id:0 resources:1>, game=<Game values:[[1, 7, 1], [1, 1, 12], [12, 1, 1], [1, 1, 2], [2, 2, 3]] time_horizon:5>),\n",
+       " experiment(environment=<Environment>, agent=<Defender id:0 resources:1>, game=<Game values:[[1.0, 1.0], [1.0, 1.0], [1.0, 1.0], [1.0, 1.0], [1.0, 1.0]] time_horizon:3>),\n",
+       " experiment(environment=<Environment>, agent=<StUDefender id:0 resources:1>, game=<Game values:[[1.0, 1.0], [3.0, 3.0], [1.0, 1.0], [2.0, 2.0], [1.0, 1.0]] time_horizon:6>),\n",
+       " experiment(environment=<Environment>, agent=<Defender id:0 resources:1>, game=<Game values:[[1.0, 1.0, 1.0], [12.0, 12.0, 12.0], [13.0, 13.0, 13.0], [1.0, 1.0, 1.0], [1.0, 1.0, 1.0]] time_horizon:5>)]"
+      ]
+     },
+     "execution_count": 387,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r.batches[0].experiments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 389,
    "metadata": {
     "collapsed": false
    },
@@ -470,7 +123,7 @@
        " {0: [0.0, 0.6, 0.0, 0.4, 0.0], 1: [0, 1, 0, 0, 0]}]"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 389,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 388,
    "metadata": {
     "collapsed": false
    },
@@ -489,15 +142,15 @@
     {
      "data": {
       "text/plain": [
-       "[{0: 0, 1: 0, 2: 0, 3: -2, 4: 0},\n",
-       " {0: 0, 1: 0, 2: 0, 3: 0, 4: 0},\n",
-       " {0: 0, 1: 0, 2: 0, 3: 0, 4: 0},\n",
-       " {0: 0, 1: 0, 2: 0, 3: 0, 4: 0},\n",
-       " {0: 0, 1: -3, 2: 0, 3: 0, 4: 0},\n",
-       " {0: 0, 1: -3, 2: 0, 3: 0, 4: 0}]"
+       "[{0: -0.0, 1: -0.0, 2: -0.0, 3: -2.0, 4: -0.0},\n",
+       " {0: -0.0, 1: -3.0, 2: -0.0, 3: -0.0, 4: -0.0},\n",
+       " {0: -0.0, 1: -0.0, 2: -0.0, 3: -0.0, 4: -0.0},\n",
+       " {0: -0.0, 1: -0.0, 2: -0.0, 3: -0.0, 4: -0.0},\n",
+       " {0: -0.0, 1: -0.0, 2: -0.0, 3: -0.0, 4: -0.0},\n",
+       " {0: -0.0, 1: -3.0, 2: -0.0, 3: -0.0, 4: -0.0}]"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 388,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 390,
    "metadata": {
     "collapsed": false
    },
@@ -517,14 +170,14 @@
      "data": {
       "text/plain": [
        "[{0: [1], 1: [3]},\n",
-       " {0: [1], 1: [1]},\n",
-       " {0: [1], 1: [1]},\n",
-       " {0: [1], 1: [1]},\n",
        " {0: [3], 1: [1]},\n",
+       " {0: [1], 1: [1]},\n",
+       " {0: [1], 1: [1]},\n",
+       " {0: [1], 1: [1]},\n",
        " {0: [3], 1: [1]}]"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 390,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 382,
    "metadata": {
     "collapsed": false
    },
@@ -546,19 +199,84 @@
        "<module 'source.runner' from '../source/runner.py'>"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 382,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# if you change something in the files, don't forget to reload\n",
-    "\n",
+    "reload(errors)\n",
     "reload(player)\n",
     "reload(parsers)\n",
     "reload(game)\n",
     "reload(environment)\n",
-    "reload(runner)"
+    "reload(runner)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 391,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import random"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 444,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.13013363010328816\n"
+     ]
+    }
+   ],
+   "source": [
+    "random.seed()\n",
+    "seed = random.random()\n",
+    "print(seed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 455,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "random.seed(seed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 459,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5510505440806545"
+      ]
+     },
+     "execution_count": 459,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random.random()"
    ]
   }
  ],
